# HandwritingDetector

./: .gitignore  Dockerfile  README.md  pyproject.toml
source/: getHandwritingModel.py  server.py
